--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href=".lovish-portfolio/assets/images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href=".assets/images/favicon-32x32.png" />
   <link rel="icon" href="https://cdn.jsdelivr.net/gh/feathericons/feather@4.28.0/dist/icons/mail.svg"
     type="image/svg+xml">
 
@@ -57,13 +57,13 @@
       <div class="wrapper hero__wrapper bottom-border">
         <div class="hero__content">
           <picture>
-            <source media="(min-width: 62.5em)" srcset="lovish-portfolio/assets/images/Gemini_Generated_Image_et70ouet70ouet70.jpg" />
-            <source media="(min-width: 37.5em)" srcset="lovish-portfolio/assets/images/Gemini_Generated_Image_et70ouet70ouet70.jpg" />
-            <img class="hero__image" src="lovish-portfolio/assets/images/Gemini_Generated_Image_et70ouet70ouet70.jpg" alt="image"
+            <source media="(min-width: 62.5em)" srcset="assets/images/Gemini_Generated_Image_et70ouet70ouet70.jpg" />
+            <source media="(min-width: 37.5em)" srcset="assets/images/Gemini_Generated_Image_et70ouet70ouet70.jpg" />
+            <img class="hero__image" src="assets/images/Gemini_Generated_Image_et70ouet70ouet70.jpg" alt="image"
               width-="174" height="383" />
           </picture>
-          <img class="hero__rings" src="lovish-portfolio/assets/images/pattern-rings.svg" alt="" width="530" height="129" />
-          <img class="hero__circle" src="lovish-portfolio/assets/images/pattern-circle.svg" alt="" width="129" height="129" />
+          <img class="hero__rings" src="assets/images/pattern-rings.svg" alt="" width="530" height="129" />
+          <img class="hero__circle" src="assets/images/pattern-circle.svg" alt="" width="129" height="129" />
           <div class="hero__text">
             <h1 class="hero__headline header-xl">
               Nice to<br />
@@ -113,7 +113,7 @@
 
         </div>
       </div>
-      <img class="skills__rings" src="lovish-portfolio/assets/images/pattern-rings.svg" alt="" width="530" height="129" />
+      <img class="skills__rings" src="assets/images/pattern-rings.svg" alt="" width="530" height="129" />
     </section>
 
     <section class="projects">
@@ -124,8 +124,8 @@
 
           <div class="projects__item">
             <picture class="projects__picture">
-              <source media="(min-width: 62.5em)" srcset="lovish-portfolio/assets/images/1.png" />
-              <img class="projects__image" src="lovish-portfolio/assets/images/1.png" alt="screenshot of design portfolio website"
+              <source media="(min-width: 62.5em)" srcset="assets/images/1.png" />
+              <img class="projects__image" src="assets/images/1.png" alt="screenshot of design portfolio website"
                 width-="343" height="253" />
             </picture>
             <h3 class="projects__name">E-Commerce (full stack)</h3>
@@ -141,8 +141,8 @@
 
           <div class="projects__item">
             <picture class="projects__picture">
-              <source media="(min-width: 62.5em)" srcset="lovish-portfolio/assets/images/2.png" />
-              <img class="projects__image" src="lovish-portfolio/assets/images/2.png"
+              <source media="(min-width: 62.5em)" srcset="assets/images/2.png" />
+              <img class="projects__image" src="assets/images/2.png"
                 alt="screenshot of learning platform website with different courses" width-="343" height="253" />
             </picture>
             <h3 class="projects__name">Food delivery app (front end)</h3>
@@ -158,8 +158,8 @@
 
           <div class="projects__item">
             <picture class="projects__picture">
-              <source media="(min-width: 62.5em)" srcset="lovish-portfolio/assets/images/3.png" />
-              <img class="projects__image" src="lovish-portfolio/assets/images/3.png"
+              <source media="(min-width: 62.5em)" srcset="assets/images/3.png" />
+              <img class="projects__image" src="assets/images/3.png"
                 alt="screenshot of To Do App showing a list of active and complete tasks" width-="343" height="253" />
             </picture>
             <h3 class="projects__name">Shopping App ( front end)</h3>
@@ -176,8 +176,8 @@
 
           <div class="projects__item">
             <picture class="projects__picture">
-              <source media="(min-width: 62.5em)" srcset="lovish-portfolio/assets/images/4.png" />
-              <img class="projects__image" src="lovish-portfolio/assets/images/4.png"
+              <source media="(min-width: 62.5em)" srcset="assets/images/4.png" />
+              <img class="projects__image" src="assets/images/4.png"
                 alt="screenshot of video player app with grid of thumbnails of movies and TV shows" width-="343"
                 height="253" />
             </picture>
@@ -211,24 +211,24 @@
           <div class="contact__control">
             <label for="name" class="visually-hidden">Name</label>
             <input type="text" id="name" name="name" placeholder="Name" required />
-            <img src="lovish-portfolio/assets/images/icon-invalid.svg" alt="" class="contact__invalid-icon" width="24" height="24" />
+            <img src="assets/images/icon-invalid.svg" alt="" class="contact__invalid-icon" width="24" height="24" />
           </div>
           <div class="contact__control">
             <label for="email" class="visually-hidden">Email</label>
             <input type="email" id="email" name="email" placeholder="Email" required />
-            <img src="lovish-portfolio/assets/images/icon-invalid.svg" alt="" class="contact__invalid-icon" width="24" height="24" />
+            <img src="assets/images/icon-invalid.svg" alt="" class="contact__invalid-icon" width="24" height="24" />
           </div>
           <div class="contact__control">
             <label for="message" class="visually-hidden">Message</label>
             <textarea name="message" id="message" cols="30" rows="3" placeholder="Message" required></textarea>
-            <img src="lovish-portfolio/assets/images/icon-invalid.svg" alt="" class="contact__invalid-icon" width="24" height="24" />
+            <img src="assets/images/icon-invalid.svg" alt="" class="contact__invalid-icon" width="24" height="24" />
           </div>
           <div class="contact__control align-right">
             <button type="submit">Send Message</button>
           </div>
         </form>
       </div>
-      <img class="contact__rings" src="lovish-portfolio/assets/images/pattern-rings.svg" alt="" width="530" height="129" />
+      <img class="contact__rings" src="assets/images/pattern-rings.svg" alt="" width="530" height="129" />
     </section>
   </main>
 
